--- a/ctcontrol/ctcontrol.csproj
+++ b/ctcontrol/ctcontrol.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -60,8 +61,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Model\Command.cs" />
-    <Compile Include="Model\Reboot.cs" />
+    <Compile Include="Classes\Autorun.cs" />
+    <Compile Include="Classes\Command.cs" />
+    <Compile Include="Classes\Reboot.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -114,5 +116,6 @@
   <ItemGroup>
     <Resource Include="iconapp.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
