--- a/City/City.csproj
+++ b/City/City.csproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5843AC74-56FE-47C8-B46F-696B4D19D506}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ctcontrol</RootNamespace>
-    <AssemblyName>ctcontrol</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>City</RootNamespace>
+    <AssemblyName>City</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
