--- a/City/packages.config
+++ b/City/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
-  <package id="Prism.Core" version="8.1.97" targetFramework="net461" />
-  <package id="Prism.DryIoc" version="8.1.97" targetFramework="net461" />
-  <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Prism.Core" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="Prism.DryIoc" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
