--- a/ModuleA/Properties/Settings.settings
+++ b/ModuleA/Properties/Settings.settings
@@ -6,6 +6,12 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="Id" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">250</Value>
+    </Setting>
+    <Setting Name="Culture" Type="System.Globalization.CultureInfo" Scope="User">
+      <Value Profile="(Default)">ru-RU</Value>
+    </Setting>
+    <Setting Name="Open" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
