--- a/ModuleA/app.config
+++ b/ModuleA/app.config
@@ -5,6 +5,7 @@
       <section name="ModuleA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -19,6 +20,12 @@
         <value>False</value>
       </setting>
       <setting name="Id" serializeAs="String">
+        <value>250</value>
+      </setting>
+      <setting name="Culture" serializeAs="String">
+        <value>ru-RU</value>
+      </setting>
+      <setting name="Open" serializeAs="String">
         <value>0</value>
       </setting>
     </ModuleA.Properties.Settings>
