--- a/ModuleA/ModuleA.csproj
+++ b/ModuleA/ModuleA.csproj
@@ -67,7 +67,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BackgroundModel.cs" />
     <Compile Include="Models\CommonModel.cs" />
+    <Compile Include="Models\LanguageModel.cs" />
     <Compile Include="Models\MainModel.cs" />
     <Compile Include="Models\SettingsModel.cs" />
     <Compile Include="ModuleAModule.cs" />
@@ -84,6 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="ViewModels\BackgroundViewModel.cs" />
     <Compile Include="ViewModels\CommonViewModel.cs" />
     <Compile Include="ViewModels\LanguageViewModel.cs" />
@@ -104,9 +107,11 @@
     <Compile Include="Views\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Properties\Resources.en-Us.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
@@ -116,6 +121,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Resources\lang.en-US.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\lang.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\BackgroundView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
