--- a/City/packages.config
+++ b/City/packages.config
@@ -5,5 +5,6 @@
   <package id="Prism.Core" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
   <package id="Prism.DryIoc" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="SharpVectors" version="1.7.6" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
