--- a/ModuleA/ModuleA.csproj
+++ b/ModuleA/ModuleA.csproj
@@ -172,8 +172,6 @@
       <Name>ControlLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
