--- a/ModuleA/app.config
+++ b/ModuleA/app.config
@@ -28,6 +28,9 @@
       <setting name="Open" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="LanguageOpen" serializeAs="String">
+        <value>0</value>
+      </setting>
     </ModuleA.Properties.Settings>
   </userSettings>
 </configuration>
