--- a/ModuleA/Properties/Settings.settings
+++ b/ModuleA/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="Open" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="LanguageOpen" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
