--- a/ModuleA/app.config
+++ b/ModuleA/app.config
@@ -31,6 +31,9 @@
       <setting name="LanguageOpen" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="ip" serializeAs="String">
+        <value>192.168.0.107:4242</value>
+      </setting>
     </ModuleA.Properties.Settings>
   </userSettings>
 </configuration>
