--- a/ModuleA/packages.config
+++ b/ModuleA/packages.config
@@ -4,6 +4,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="QRCoder" version="1.4.1" targetFramework="net48" />
   <package id="SharpVectors" version="1.7.6" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
