--- a/City/packages.config
+++ b/City/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
+  <package id="Noesis.Javascript" version="0.7.1.0" targetFramework="net48" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
   <package id="Prism.DryIoc" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" requireReinstallation="true" />
+  <package id="QRCoder" version="1.4.1" targetFramework="net48" />
   <package id="SharpVectors" version="1.7.6" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
