--- a/ControlLibrary/ControlLibrary.csproj
+++ b/ControlLibrary/ControlLibrary.csproj
@@ -73,11 +73,13 @@
     <Compile Include="Classes\Position.cs" />
     <Compile Include="Classes\Reboot.cs" />
     <Compile Include="Classes\Server.cs" />
-    <Compile Include="Classes\ServerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
