--- a/ModuleA/app.config
+++ b/ModuleA/app.config
@@ -34,6 +34,9 @@
       <setting name="ip" serializeAs="String">
         <value>192.168.0.107:4242</value>
       </setting>
+      <setting name="ProcessName" serializeAs="String">
+        <value />
+      </setting>
     </ModuleA.Properties.Settings>
   </userSettings>
 </configuration>
